--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -4,7 +4,7 @@ header#banner.hero-unit
   .container
     h1 It's Quiz Time!
     p.lead
-      a(href='/quiz') Login
+      a(href='/quiz') Take the quiz
       | #{space} or #{space}
       a(href='/signup') sign up
       | #{space} to begin. #{space}
